<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WildFishingNote</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_top_action_bar">TopActionBarActivity</string>
    <string name="search_icon_label">检索</string>
    <string name="title_activity_add_main">AddMainActivity</string>
    <string name="statistics">统计</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="guide">出钓指导</string>
    <string name="article">文章</string>
    <string name="time">时间</string>
    <string name="place">钓位</string>
    <string name="point">钓点</string>
    <string name="results">渔获</string>
    <string name="confirm">确认</string>
    <string name="weather">天气</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="history">听说/补记</string>
    <string name="title_activity_main_tab1">MainTab1Activity</string>
    <string name="main_tab1">主tab1</string>
    <string name="title_activity_main_tab2">MainTab2Activity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_tab3">MainTab3Activity</string>
    <string name="title_activity_main_tab4">MainTab4Activity</string>
    <string name="title_activity_calendar_dailog">CalendarDailogActivity</string>
    <string name="summary">总结</string>
    <string name="summary_hint">写下心得体会，心情等</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="title_activity_place_detail">钓位信息</string>
    <string name="add">添加</string>
    <string name="title_activity_add_place">AddPlaceActivity</string>
    <string name="add_place_area_hint">区域</string>
    <string name="add_place_title_hint">标题，要求简短</string>
    <string name="add_place_detail_hint">详细描述</string>
    <string name="add_place_pick_pic">添加钓位图片</string>
    <string name="confirm">确定</string>
    <string name="place_detail_title">钓位标题:</string>
    <string name="place_detail_detail">钓位详细:</string>
    <string name="place_detail_image">钓位图片:</string>
    <string name="title_activity_add_point">AddPointActivity</string>
    <string name="title_activity_point_detail">PointDetailActivity</string>
    <string name="depth_hint">单位:米</string>
    <string name="bait_name_hint">饵料标题</string>
    <string name="bait_detail_hint">饵料详细</string>
    <string name="lure_method_name_hint">打窝标题</string>
    <string name="lure_method_detail_hint">打窝详细</string>
    <string name="rod_length_name_hint">竿长 单位:米</string>
    <string name="rod_length">竿长:</string>
    <string name="lure_method">打窝:</string>
    <string name="bait">饵料:</string>
    <string name="depth">水深:</string>
    <string name="edit">编辑</string>
    <string name="title_activity_show_all_rod_length">维护竿长</string>
    <string name="title_activity_show_all_lure_method">维护打窝方法</string>
    <string name="title_activity_show_all_bait">维护饵料</string>
    <string name="back">返回</string>
    <string name="rod_length_and_lure_method_and_bait_edit">竿长、打窝、饵料维护区</string>
    <string name="edit_rod_length">编辑竿长</string>
    <string name="add_rod_length">添加竿长</string>
    <string name="edit_lure_method">编辑打窝</string>
    <string name="add_lure_method">添加打窝</string>
    <string name="edit_bait">编辑饵料</string>
    <string name="add_bait">添加饵料</string>   
    <string name="pre">上一步</string>
    <string name="next">下一步</string>
    <string name="fish_type">鱼种</string>
    <string name="weight">重量</string>
    <string name="weight_hint">单位：克</string>
    <string name="count">数量</string>
    <string name="count_hint">数量</string>
    <string name="hook_flag">入护</string>
    <string name="in">入护</string>
    <string name="out">跑鱼</string>
    <string name="add_result_pick_pic">图片</string>
    <string name="statistics">统计</string>
    <string name="date">日期</string>
    <string name="min_temp_c">最低温</string>
    <string name="max_temp_c">最高温</string>
    <string name="sunrise">日出时间</string>
    <string name="sunset">日落时间</string>
    <string name="time">时间</string>
    <string name="temp_c">气温</string>
    <string name="wind_dir_degree">风向</string>
    <string name="wind_speed_kmph">风速</string>
    <string name="pressure">气压</string>
	<string name="weather_name">天气</string>
	<string name="cloud_cover">云量</string>
	<string name="year_relay_fish_result_image">年份渔获图</string>
	<string name="month_relay_fish_result_image">月份渔获图</string>
	<string name="tempc_relay_fish_result_image">气温和渔获关系图</string>

</resources>
