<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				
    <TextView
    	android:layout_width="40dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/time"
	    android:layout_margin="2dp"
		/>

    
    <TextView
    	android:layout_width="40dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/temp_c"
	    android:layout_margin="2dp"
		/>
    
    <TextView
    	android:layout_width="45dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/wind_dir_degree"
	    android:layout_margin="2dp"
		/>

    <TextView
    	android:layout_width="40dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/wind_speed_kmph"
	    android:layout_margin="2dp"
		/>
		
	<TextView
    	android:layout_width="50dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/pressure"
	    android:layout_margin="2dp"
		/>	
	
	<TextView
    	android:layout_width="0dp"
    	android:layout_weight="1"
	    android:layout_height="wrap_content"
	    android:hint="@string/weather_name"
	    android:layout_margin="2dp"
		/>


</LinearLayout>