<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				
    <TextView
    	android:layout_width="80dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/date"
	    android:layout_margin="2dp"
		/>

    
    <TextView
    	android:layout_width="50dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/min_temp_c"
	    android:layout_margin="2dp"
		/>
    
    <TextView
    	android:layout_width="50dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/max_temp_c"
	    android:layout_margin="2dp"
		/>

    <TextView
    	android:layout_width="70dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/sunrise"
	    android:layout_margin="2dp"
		/>
		
	<TextView
    	android:layout_width="70dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/sunset"
	    android:layout_margin="2dp"
		/>			
    

</LinearLayout>