<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.apis.app.Tab5Activity" >

<ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">
        
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/summary" />
		        
	<TextView
				android:id="@+id/summaryTextView"
				android:layout_margin="8dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
		        
	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/start_time" />
		        
	<TextView
				android:id="@+id/startTimeTextView"
				android:layout_margin="8dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />	  	   
		        
	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/end_time" />
		        
	<TextView
				android:id="@+id/endTimeTextView"
				android:layout_margin="8dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />
		        
	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/place" />
		        
	<TextView
				android:id="@+id/placeTextView"
				android:layout_margin="8dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />	
		        
	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/point" />
		        
	<TextView
				android:id="@+id/pointTextView"
				android:layout_margin="8dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content" />	   
		        
	<TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/statistics" />
	
	<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >      
	<com.simple.wildfishingnote.moresimple.NestedListView
        android:id="@+id/confirmListViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp" 
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
    </com.simple.wildfishingnote.moresimple.NestedListView>      
    </LinearLayout>	  

    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/add_result_pick_pic" />       		             	        
    
    <GridView
            android:id="@+id/confrimGridGallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="-10dp"
            android:layout_marginTop="-10dp"
            android:horizontalSpacing="-15dp"
            android:numColumns="3"
            android:padding="0dp"
            android:verticalSpacing="-15dp"
            tools:listitem="@layout/gallery_item" >
        </GridView>
  </LinearLayout>	  
</ScrollView>

    <LinearLayout
    android:id="@+id/buttonsLayoutCampaignWeatherAdd"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal" >	                
	                
	                <com.beardedhen.androidbootstrap.BootstrapButton
				    android:id="@+id/buttonCampaignWeatherPre"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.5"
	                android:layout_margin="6dp"
	                android:text="@string/pre"
	                bootstrapbutton:bb_icon_left="fa-undo"
	                bootstrapbutton:bb_roundedCorners="true"
	                bootstrapbutton:bb_type="success" />
	
	            <com.beardedhen.androidbootstrap.BootstrapButton
	                android:id="@+id/buttonSaveAll"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.5"
	                android:layout_margin="6dp"
	                android:text="@string/save"
	                bootstrapbutton:bb_icon_left="fa-floppy-o"
	                bootstrapbutton:bb_roundedCorners="true"
	                bootstrapbutton:bb_type="success" />
</LinearLayout>	 

    <LinearLayout
    android:id="@+id/buttonsLayoutCampaignWeatherEdit"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal" >
	
	            <com.beardedhen.androidbootstrap.BootstrapButton
	                android:id="@+id/buttonCampaignWeatherSave"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_margin="6dp"
	                android:text="@string/save"
	                bootstrapbutton:bb_icon_left="fa-floppy-o"
	                bootstrapbutton:bb_roundedCorners="true"
	                bootstrapbutton:bb_type="success" />
</LinearLayout>

</RelativeLayout>
