<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.simple.wildfishingnote.AddPointActivity" >

<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >	
	<TextView
 		android:layout_width="35dp" 
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp" 
		android:layout_marginLeft="8dp"
		android:layout_marginBottom="8dp"
 		android:text="@string/depth" />	
	<com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/addPointDepthEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/depth_hint" 
        android:inputType="numberDecimal" 
        bootstrapbutton:be_roundedCorners="true"
	    bootstrapbutton:be_state="success"/>
	</LinearLayout>
	    
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
	<TextView
 		android:layout_width="35dp" 
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp" 
		android:layout_marginLeft="8dp"
		android:layout_marginBottom="8dp"
 		android:text="@string/rod_length" />		
    <Spinner
        android:id="@+id/addPointRodLengthSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"  />
    </LinearLayout>
    
    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
	<TextView
 		android:layout_width="35dp" 
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp" 
		android:layout_marginLeft="8dp"
		android:layout_marginBottom="8dp"
 		android:text="@string/lure_method" />	
    <Spinner
        android:id="@+id/addPointLureMethodSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="8dp"  />
        
    </LinearLayout>
    
    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
	<TextView
 		android:layout_width="35dp" 
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp" 
		android:layout_marginLeft="8dp"
		android:layout_marginBottom="8dp"
 		android:text="@string/bait" />	
    <Spinner
        android:id="@+id/addPointBaitSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="8dp"  />
    </LinearLayout>

</LinearLayout>


<LinearLayout
    android:id="@+id/buttonsLayoutAddPoint"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal" >
	
	            <com.beardedhen.androidbootstrap.BootstrapButton
	                android:id="@+id/addPointButtonSave"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_margin="8dp"
	                android:text="@string/save"
	                android:onClick="onAddPointButtonSaveClickListener"
	                bootstrapbutton:bb_icon_left="fa-floppy-o"
	                bootstrapbutton:bb_roundedCorners="true"
	                bootstrapbutton:bb_type="success" />
</LinearLayout>

</RelativeLayout>
