<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.simple.wildfishingnote.AddPlaceActivity" >

<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >
		
		<com.beardedhen.androidbootstrap.BootstrapEditText
	            android:id="@+id/addPlaceTitle"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_margin="8dp"
	            android:hint="@string/add_place_title_hint" 
	            bootstrapbutton:be_roundedCorners="true"
	            bootstrapbutton:be_state="success" />
	       		
	     <com.beardedhen.androidbootstrap.BootstrapEditText
	            android:id="@+id/addPlaceDetail"
	            android:layout_width="match_parent"
	            android:layout_height="80dp"
	            android:layout_margin="8dp"
	            android:hint="@string/add_place_detail_hint" 
	            bootstrapbutton:be_roundedCorners="true"
	            bootstrapbutton:be_state="success"
	            android:gravity="left|top"
	       		android:inputType="textMultiLine" />
	     
	     <com.beardedhen.androidbootstrap.BootstrapButton
				    android:id="@+id/addPlaceGalleryPickBtn"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_margin="8dp"
	                android:text="@string/add_place_pick_pic"
	                bootstrapbutton:bb_icon_left="fa-calendar"
	                bootstrapbutton:bb_roundedCorners="true"
	                bootstrapbutton:bb_type="success" />
	       		
	<ViewSwitcher
        android:id="@+id/addPlaceViewSwitcher"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="1" >

		<GridView
            android:id="@+id/addPlaceGridGallery"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginBottom="-10dp"
            android:layout_marginLeft="-10dp"
            android:layout_marginRight="-10dp"
            android:layout_marginTop="-10dp"
            android:horizontalSpacing="-15dp"
            android:numColumns="3"
            android:padding="0dp"
            android:verticalSpacing="-15dp"
            tools:listitem="@layout/gallery_item" >
        </GridView>
        
        <ImageView
            android:id="@+id/addPlaceSinglePickImg"
            android:layout_width="400dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:src="@drawable/no_media" />
    </ViewSwitcher>
    
</LinearLayout>

<LinearLayout
    android:id="@+id/buttonsLayoutAddPlace"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal" >

<com.beardedhen.androidbootstrap.BootstrapButton
				    android:id="@+id/addPlaceButtonCancel"
	                android:layout_width="10dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.5"
	                android:layout_margin="8dp"
	                android:text="@string/cancel"
	                bootstrapbutton:bb_icon_left="fa-undo"
	                bootstrapbutton:bb_roundedCorners="true"
	                bootstrapbutton:bb_type="success" />
	
	            <com.beardedhen.androidbootstrap.BootstrapButton
	                android:id="@+id/addPlaceButtonSave"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.5"
	                android:layout_margin="8dp"
	                android:text="@string/save"
	                android:onClick="onAddPlaceButtonSaveClickListener"
	                bootstrapbutton:bb_icon_left="fa-floppy-o"
	                bootstrapbutton:bb_roundedCorners="true"
	                bootstrapbutton:bb_type="success" />
</LinearLayout>

</RelativeLayout>
