<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
<LinearLayout android:id = "@+id/col1Layout"
    android:orientation="vertical"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:layout_height="70dp">
    
    <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <TextView
    	android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.1"
	    android:hint="@string/point"
	    android:singleLine="true"
	    android:layout_margin="2dp"
		/>
		
		
    <TextView
	    android:id="@+id/textViewPointEachItem"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.4"
	    android:singleLine="true"
	    android:layout_margin="2dp"
		/>
    
    <TextView
    	android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.1"
	    android:hint="@string/fish_type"
	    android:singleLine="true"
	    android:layout_margin="2dp"
		/>
		
	<TextView
        android:id="@+id/textViewFishTypeEachItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:layout_alignParentRight="true"
        android:layout_margin="2dp"
		/>
    
    
	</LinearLayout>
	
    <LinearLayout 
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    
    <TextView
    	android:layout_width="35dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/weight"
	    android:singleLine="true"
	    android:layout_margin="2dp"
		/>
		
		
    <TextView
	    android:id="@+id/textViewWeightEachItem"
	    android:layout_width="0dp"
	    android:layout_height="wrap_content"
	    android:layout_weight="0.4"
	    android:singleLine="true"
	    android:layout_margin="2dp"
		/>
    
    <TextView
    	android:layout_width="35dp"
	    android:layout_height="wrap_content"
	    android:hint="@string/count"
	    android:singleLine="true"
	    android:layout_margin="2dp"
		/>
		
	<TextView
        android:id="@+id/textViewCountEachItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.4"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:layout_margin="2dp"
		/>
		
		
	<TextView
        android:id="@+id/textViewHookFlagEachItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:layout_margin="2dp"
		/>
    
    
	</LinearLayout>
    
</LinearLayout>    


</LinearLayout>